# anorby

./: .ghcid  .gitignore  LICENSE  README.md  anorby.cabal  package-lock.json  package.json  tailwind.config.js
.github/workflows/: action.yml
app/: Anorby.hs  Auth.hs  Cache.hs  Compare.hs  Config.hs  Database.hs  Main.hs  Marry.hs  Rank.hs  Similarity.hs  Simulate.hs  Types.hs
app/Core/: Matching.hs  Ranking.hs  RollingShadow.hs  Similarity.hs
app/Utils/: Cache.hs  Config.hs  Email.hs  MatchState.hs  MatchTrigger.hs  Simulate.hs  Time.hs
app/Web/: Handlers.hs  Server.hs  Styles.hs  Templates.hs  Types.hs
data/: stereo.json
src/: input.css
static/css/: output.css
styles/: input.css  output.css
