cabal-version:      3.0
name:               anorby
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             cordcivilian
maintainer:         public@cordcivilian.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable anorby
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Config,
        Cache,
        Anorby,
        Similarity,
        Rank,
        Marry,
        Simulate,
    -- other-extensions:
    build-depends:
        SHA,
        aeson,
        async,
        base ^>=4.20.0.0,
        binary,
        blaze-html,
        blaze-markup,
        bytestring,
        bytestring,
        containers,
        cookie,
        directory,
        http-types,
        mime-mail,
        random,
        resource-pool,
        smtp-mail,
        sqlite-simple,
        text,
        time,
        uuid,
        uuid-types,
        vector,
        wai,
        wai-extra,
        warp,
    hs-source-dirs:   app
    default-language: Haskell2010
