cabal-version:      3.0
name:               anorby
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             cordcivilian
maintainer:         public@cordcivilian.com
build-type:         Simple
extra-doc-files:    README.md

executable anorby
  default-language: Haskell2010
  ghc-options:      -rtsopts
                    -with-rtsopts=-N
                    -Wall
                    -Wcompat
                    -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-home-modules
                    -Wpartial-fields
                    -Wredundant-constraints
                    -threaded
                    -O2
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:    Auth
                    Core.Matching
                    Core.Ranking
                    Core.Similarity
                    Database
                    Types
                    Utils.Cache
                    Utils.Config
                    Utils.Email
                    Utils.Simulate
                    Utils.Time
                    Web.Handlers
                    Web.Server
                    Web.Styles
                    Web.Templates
                    Web.Types
  build-depends:    SHA,
                    aeson,
                    async,
                    base ^>=4.20.0.0,
                    binary,
                    blaze-html,
                    blaze-markup,
                    bytestring,
                    containers,
                    cookie,
                    directory,
                    extra,
                    http-types,
                    mime-mail,
                    random,
                    resource-pool,
                    smtp-mail,
                    sqlite-simple,
                    text,
                    time,
                    uuid,
                    uuid-types,
                    vector,
                    wai,
                    wai-extra,
                    warp,
