cabal-version:      3.0
name:               anorby
version:            0.1.0.0
license:            MIT
license-file:       README.md
author:             joshwongcc
build-type:         Simple

executable anorby
  hs-source-dirs:
    app
  main-is:
    Main.hs
  other-modules:
    Auth
    Core.Matching
    Core.Ranking
    Core.Similarity
    Core.RollingShadow
    Database
    Types
    Utils.Cache
    Utils.Config
    Utils.Email
    Utils.Simulate
    Utils.Time
    Utils.MatchState
    Utils.MatchTrigger
    Web.Handlers
    Web.Server
    Web.Templates
    Web.Types
  build-depends:
    base ^>=4.21.0.0,
    SHA,
    aeson,
    binary,
    blaze-html,
    blaze-markup,
    bytestring,
    containers,
    cookie,
    directory,
    extra,
    http-conduit,
    http-types,
    mime-mail,
    random,
    resource-pool,
    smtp-mail,
    sqlite-simple,
    text,
    time,
    uuid,
    uuid-types,
    vector,
    wai,
    wai-extra,
    warp,
    xss-sanitize
  default-language:
    Haskell2010
  ghc-options:
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -O2
